--- a/src/Soenneker.Dictionaries.Concurrent.AutoClearing.csproj
+++ b/src/Soenneker.Dictionaries.Concurrent.AutoClearing.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net9.0</TargetFrameworks>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <Platforms>AnyCPU</Platforms>
         <NoWarn>$(NoWarn);1591</NoWarn>
@@ -9,7 +9,7 @@
 
     <PropertyGroup>
         <Description>A thread-safe dictionary that automatically removes entries after a time interval. Designed for high-concurrency scenarios where cached or temporary values should expire without manual cleanup, reducing memory usage and preventing stale data buildup.</Description>
-        <Version Condition="'$(BUILD_VERSION)' == ''">3.0.0</Version>
+        <Version Condition="'$(BUILD_VERSION)' == ''">4.0.0</Version>
         <Version Condition="'$(BUILD_VERSION)' != ''">$(BUILD_VERSION)</Version>
         <AssemblyName>Soenneker.Dictionaries.Concurrent.AutoClearing</AssemblyName>
         <PackageId>Soenneker.Dictionaries.Concurrent.AutoClearing</PackageId>
