--- a/src/Soenneker.Dictionaries.Concurrent.AutoClearing.csproj
+++ b/src/Soenneker.Dictionaries.Concurrent.AutoClearing.csproj
@@ -41,7 +41,7 @@
     </ItemGroup>
     
     <ItemGroup>
+      <PackageReference Include="Soenneker.Atomics.Bools" Version="4.0.2" />
       <PackageReference Include="Soenneker.Extensions.ValueTask" Version="4.0.97" />
-      <PackageReference Include="Soenneker.Utils.AtomicBool" Version="4.0.11" />
     </ItemGroup>
 </Project>
